syntax = "proto3";

package grpc;
option go_package="./internal/services/grpc";

message SendUserSegmentRequest{
    string username = 1;
    string segment = 2;
}

message SendUserSegmentResponse{
    string result = 1;
}

// Urban service for transmit message of new user segmention between USS and ES
service EsService{
    rpc SendUserSegment(SendUserSegmentRequest) returns(SendUserSegmentResponse) {};
}